--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,7 +16,7 @@
   {% include 'navbar.html' %}
   <div id="particles-js" style="height: 185vh;width: 100vw;z-index: -50; position: fixed; top: 0;">
   </div>
-  <div class=" flex justify-center items-center fade-in " style="height: 90vh; top: 25%;">
+  <div class=" flex justify-center items-center fade-in " style="height: 93vh;  width: 100vw;">
 
     <div class="flex justify-center items-center space-x-24 " style="width: 100vw; height: fit-content;">
       <div class="grid grid-rows-2 grid-flow-col gap-x-32">
