--- a/templates/competences.html
+++ b/templates/competences.html
@@ -28,7 +28,7 @@
 
 
     </div>
-    <div style="width: 99vw;" class="flex mt-3 ml-2 justify-center">
+    <div style="width: 99vw;" class="flex mt-3 ml-2 justify-center fade-in">
         <div class="input-group text-white word " style="width: 20vw;">
             <span class="input-group-text bg-white/40 backdrop-blur text-black border-hidden"
                 style="font-family: 'titre', sans-serif !important">Catégories</span>
